Curriculum-based Timetabling  - Edit Curriculum    - added ability to easily navigate through courses (alt/meta + arrows) and swap courses (ctrl + up/down)    - when some courses are selected and last-like / enrollments are visible, student enrollment comparison of the mouse over course and the selected courses is displayed (in a yellow tooltip popup)  - few other smaller improvements and bug fixes

--- a/WebContent/styles/unitime4.css
+++ b/WebContent/styles/unitime4.css
@@ -981,3 +981,11 @@ h1 {
 	border: 1px solid #AB8B00;
 	background: #FFF0AB;
 }
+
+.unitime-DashedBottom {
+	border-bottom: 1px dashed #333333;
+}
+
+.unitime-DashedTop {
+	border-top: 1px dashed #333333;
+}
